preregister and shoparea

--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+        emailjs.init("user_LQlJb9lKln0hQ1m7ktXKU");
+    })();
+  </script>
 </html>
