--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Offrez une carte cadeau personnalisée à vos proches !"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
